MDEV-275: SHOW EXPLAIN: server crashes in JOIN::print_explain with IN subquery and aggregate function - Don't try to produce plans after JOIN::cleanup() has been called, because:    = JOIN::cleanup leaves data structures in partially-cleaned state    = Walking them is hazardous (see this bug), and has funny effects      (See previous commits, "Using join cache" may or may not be shown)    = Changing data structures to be persisted may cause unwanted side effects - The consequence is that SHOW EXPLAIN will show "Query plan already deleted" when e.g.   reading data after filesort.